<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_calendar_agenda"
            android:title="@string/agenda" />
        <item
            android:id="@+id/nav_day"
            android:icon="@drawable/ic_calendar_day"
            android:title="@string/day" />
        <item
            android:id="@+id/nav_week"
            android:icon="@drawable/ic_calendar_week"
            android:title="@string/week" />

        <item
            android:id="@+id/nav_month"
            android:icon="@drawable/ic_calendar_month"
            android:title="@string/month" />
    </group>

</menu>