<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/specialDay"
        android:icon="@drawable/ic_special_tab"
        android:title="@string/special_day"
        android:checked="true"
        android:color="@color/colorPrimaryDark"/>

    <item
        android:id="@+id/daily"
        android:title="@string/daily"
        android:checked="true"
        android:icon="@drawable/ic_special_tab"
        android:color="@color/colorPrimaryDark"/>

    <item
        android:id="@+id/weekly"
        android:title="@string/weekly"
        android:checked="true"
        android:icon="@drawable/ic_special_tab"
        android:color="@color/colorPrimaryDark"/>

    <item
        android:id="@+id/monthly"
        android:icon="@drawable/ic_special_tab"
        android:title="@string/monthly"
        android:checked="true"
        android:color="@color/colorPrimaryDark"/>
</menu>