<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clickable="true"
    android:focusable="true"
    android:background="@android:color/white"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:id="@+id/llDay"
        android:orientation="horizontal"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_width="match_parent"
        android:background="@color/colorPrimaryDark"
        android:layout_height="55dp">
        <TextView
            android:layout_weight="1"
            android:layout_width="0dp"
            android:text="@string/sun"
            android:textSize="14sp"
            android:gravity="center"
            android:textColor="@android:color/white"
            android:layout_height="match_parent"/>

        <TextView
            android:layout_weight="1"
            android:layout_width="0dp"
            android:text="@string/mon"
            android:textSize="14sp"
            android:gravity="center"
            android:textColor="@android:color/white"
            android:layout_height="match_parent"/>

        <TextView
            android:layout_weight="1"
            android:layout_width="0dp"
            android:text="@string/tue"
            android:textSize="14sp"
            android:gravity="center"
            android:textColor="@android:color/white"
            android:layout_height="match_parent"/>

        <TextView
            android:layout_weight="1"
            android:layout_width="0dp"
            android:text="@string/wed"
            android:textSize="14sp"
            android:gravity="center"
            android:textColor="@android:color/white"
            android:layout_height="match_parent"/>

        <TextView
            android:layout_weight="1"
            android:layout_width="0dp"
            android:text="@string/thu"
            android:textSize="14sp"
            android:gravity="center"
            android:textColor="@android:color/white"
            android:layout_height="match_parent"/>

        <TextView
            android:layout_weight="1"
            android:layout_width="0dp"
            android:text="@string/fri"
            android:textSize="14sp"
            android:gravity="center"
            android:textColor="@android:color/white"
            android:layout_height="match_parent"/>

        <TextView
            android:layout_weight="1"
            android:layout_width="0dp"
            android:text="@string/sat"
            android:textSize="14sp"
            android:gravity="center"
            android:textColor="@android:color/white"
            android:layout_height="match_parent"/>
    </LinearLayout>

    <androidx.viewpager.widget.ViewPager
        android:id="@+id/vpCalendar"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@id/llDay"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_width="match_parent"
        android:layout_height="0dp"/>
</androidx.constraintlayout.widget.ConstraintLayout>