<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <TextView
        android:id="@+id/tvFrequency"
        android:textSize="13sp"
        android:textStyle="bold"
        android:gravity="center"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:text="@string/frequency"
        android:textColor="@color/colorBlack"
        android:layout_width="wrap_content"
        android:layout_height="30dp"/>

    <Spinner
        android:id="@+id/spinnerFrequency"
        android:textSize="13sp"
        android:layout_marginLeft="15dp"
        app:layout_constraintBottom_toBottomOf="@id/tvFrequency"
        app:layout_constraintTop_toTopOf="@id/tvFrequency"
        app:layout_constraintStart_toEndOf="@id/tvFrequency"
        tools:text="Daily"
        android:textColor="@color/colorBlack"
        android:layout_width="170dp"
        android:layout_height="0dp"/>

    <CheckBox
        android:id="@+id/ckMon"
        android:layout_marginTop="10dp"
        android:textSize="13sp"
        android:textColor="@color/colorText"
        android:text="@string/mon"
        android:textAllCaps="false"
        app:layout_constraintTop_toBottomOf="@id/spinnerFrequency"
        app:layout_constraintStart_toStartOf="@id/spinnerFrequency"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <CheckBox
        android:id="@+id/ckTue"
        android:layout_marginTop="10dp"
        android:textSize="13sp"
        android:textColor="@color/colorText"
        android:text="@string/tue"
        android:layout_marginLeft="7dp"
        android:layout_marginStart="7dp"
        android:textAllCaps="false"
        app:layout_constraintTop_toBottomOf="@id/spinnerFrequency"
        app:layout_constraintStart_toEndOf="@id/ckMon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <CheckBox
        android:id="@+id/ckWed"
        android:layout_marginTop="10dp"
        android:textSize="13sp"
        android:textColor="@color/colorText"
        android:text="@string/wed"
        android:textAllCaps="false"
        android:layout_marginLeft="7dp"
        android:layout_marginStart="7dp"
        app:layout_constraintTop_toBottomOf="@id/spinnerFrequency"
        app:layout_constraintStart_toEndOf="@id/ckTue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <CheckBox
        android:id="@+id/ckThu"
        android:layout_marginTop="10dp"
        android:textSize="13sp"
        android:textColor="@color/colorText"
        android:text="@string/thu"
        android:layout_marginLeft="7dp"
        android:layout_marginStart="7dp"
        android:textAllCaps="false"
        app:layout_constraintTop_toBottomOf="@id/spinnerFrequency"
        app:layout_constraintStart_toEndOf="@id/ckWed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <CheckBox
        android:id="@+id/ckFri"
        android:layout_marginTop="10dp"
        android:textSize="13sp"
        android:textColor="@color/colorText"
        android:text="@string/fri"
        android:textAllCaps="false"
        app:layout_constraintTop_toBottomOf="@id/ckMon"
        app:layout_constraintStart_toStartOf="@id/ckMon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <CheckBox
        android:id="@+id/ckSat"
        android:textSize="13sp"
        android:textColor="@color/colorText"
        android:text="@string/sat"
        android:textAllCaps="false"
        app:layout_constraintTop_toTopOf="@id/ckFri"
        app:layout_constraintStart_toStartOf="@id/ckTue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <CheckBox
        android:id="@+id/ckSun"
        android:textSize="13sp"
        android:textColor="@color/colorText"
        android:text="@string/sun"
        android:textAllCaps="false"
        app:layout_constraintTop_toTopOf="@id/ckSat"
        app:layout_constraintStart_toStartOf="@id/ckWed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

</androidx.constraintlayout.widget.ConstraintLayout>