<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <RadioGroup
        android:id="@+id/rgSpecialDay"
        android:orientation="horizontal"
        android:weightSum="3"
        android:gravity="center"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <RadioButton
            android:id="@+id/radio_a"
            android:text="@string/calendar"
            android:layout_width="0dp"
            android:textSize="13sp"
            android:layout_weight="1"
            android:layout_height="wrap_content" />

        <RadioButton
            android:id="@+id/radio_b"
            android:text="@string/Lunar"
            android:checked="true"
            android:textSize="13sp"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content" />

        <RadioButton
            android:id="@+id/radio_c"
            android:text="@string/intercalary_months"
            android:layout_width="0dp"
            android:textSize="13sp"
            android:layout_weight="1"
            android:layout_height="wrap_content" />
    </RadioGroup>
</androidx.constraintlayout.widget.ConstraintLayout>