<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:clickable="true"
    android:focusable="true"
    android:background="@android:color/white"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <LinearLayout
        android:id="@+id/llDate"
        android:orientation="horizontal"
        android:weightSum="8"
        android:gravity="end"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_width="match_parent"
        android:background="@color/colorPrimaryDark"
        android:layout_height="40dp">
        <TextView
            android:id="@+id/tv1"
            android:layout_weight="1"
            android:layout_width="0dp"
            tools:text="1"
            android:gravity="center_horizontal|bottom"
            android:textSize="14sp"
            android:textColor="@android:color/white"
            android:layout_height="match_parent"/>

        <TextView
            android:id="@+id/tv2"
            android:layout_weight="1"
            android:layout_width="0dp"
            tools:text="2"
            android:gravity="center_horizontal|bottom"
            android:textSize="14sp"
            android:textColor="@android:color/white"
            android:layout_height="match_parent"/>

        <TextView
            android:id="@+id/tv3"
            android:layout_weight="1"
            android:layout_width="0dp"
            tools:text="3"
            android:gravity="center_horizontal|bottom"
            android:textSize="14sp"
            android:textColor="@android:color/white"
            android:layout_height="match_parent"/>

        <TextView
            android:id="@+id/tv4"
            android:layout_weight="1"
            android:layout_width="0dp"
            tools:text="4"
            android:gravity="center_horizontal|bottom"
            android:textSize="14sp"
            android:textColor="@android:color/white"
            android:layout_height="match_parent"/>

        <TextView
            android:id="@+id/tv5"
            android:layout_weight="1"
            android:layout_width="0dp"
            tools:text="5"
            android:gravity="center_horizontal|bottom"
            android:textSize="14sp"
            android:textColor="@android:color/white"
            android:layout_height="match_parent"/>

        <TextView
            android:id="@+id/tv6"
            android:layout_weight="1"
            android:layout_width="0dp"
            tools:text="6"
            android:gravity="center_horizontal|bottom"
            android:textSize="14sp"
            android:textColor="@android:color/white"
            android:layout_height="match_parent"/>

        <TextView
            android:id="@+id/tv7"
            android:layout_weight="1"
            android:layout_width="0dp"
            tools:text="7"
            android:gravity="center_horizontal|bottom"
            android:textSize="14sp"
            android:textColor="@android:color/white"
            android:layout_height="match_parent"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/llDay"
        android:orientation="horizontal"
        android:weightSum="8"
        android:gravity="end"
        app:layout_constraintTop_toBottomOf="@id/llDate"
        android:layout_width="match_parent"
        android:background="@color/colorPrimaryDark"
        android:layout_height="40dp">
        <TextView
            android:layout_weight="1"
            android:layout_width="0dp"
            android:text="@string/sun"
            android:gravity="center"
            android:textSize="14sp"
            android:textColor="@android:color/white"
            android:layout_height="match_parent"/>

        <TextView
            android:layout_weight="1"
            android:layout_width="0dp"
            android:text="@string/mon"
            android:gravity="center"
            android:textSize="14sp"
            android:textColor="@android:color/white"
            android:layout_height="match_parent"/>

        <TextView
            android:layout_weight="1"
            android:layout_width="0dp"
            android:text="@string/tue"
            android:gravity="center"
            android:textSize="14sp"
            android:textColor="@android:color/white"
            android:layout_height="match_parent"/>

        <TextView
            android:layout_weight="1"
            android:layout_width="0dp"
            android:text="@string/wed"
            android:gravity="center"
            android:textSize="14sp"
            android:textColor="@android:color/white"
            android:layout_height="match_parent"/>

        <TextView
            android:layout_weight="1"
            android:layout_width="0dp"
            android:text="@string/thu"
            android:gravity="center"
            android:textSize="14sp"
            android:textColor="@android:color/white"
            android:layout_height="match_parent"/>

        <TextView
            android:layout_weight="1"
            android:layout_width="0dp"
            android:text="@string/fri"
            android:gravity="center"
            android:textSize="14sp"
            android:textColor="@android:color/white"
            android:layout_height="match_parent"/>

        <TextView
            android:layout_weight="1"
            android:layout_width="0dp"
            android:text="@string/sat"
            android:gravity="center"
            android:textSize="14sp"
            android:textColor="@android:color/white"
            android:layout_height="match_parent"/>
    </LinearLayout>


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:fillViewport="true"
        android:scrollbars="none"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/llDay">

        <LinearLayout
            android:id="@+id/llTime"
            android:orientation="horizontal"
            android:weightSum="8"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>