<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <TextView
        android:id="@+id/tvFrequency"
        android:textSize="13sp"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:text="@string/frequency"
        android:gravity="center"
        android:textColor="@color/colorBlack"
        android:layout_width="wrap_content"
        android:layout_height="30dp"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/csRd"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="15dp"
        app:layout_constraintTop_toTopOf="@id/tvFrequency"
        app:layout_constraintStart_toEndOf="@id/tvFrequency"
        android:layout_width="0dp"
        android:layout_height="wrap_content">

        <RadioGroup
            android:id="@+id/rgSpecialDay"
            android:orientation="vertical"
            android:weightSum="3"
            android:gravity="center"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RadioButton
                android:id="@+id/radio_a"
                android:text=""
                android:layout_width="match_parent"
                android:textSize="13sp"
                android:layout_height="30dp" />

            <RadioButton
                android:id="@+id/radio_b"
                android:text="@string/Lunar"
                android:checked="true"
                android:textSize="13sp"
                android:layout_width="match_parent"
                android:layout_height="30dp" />

            <RadioButton
                android:id="@+id/radio_c"
                android:text="@string/intercalary_months"
                android:layout_width="match_parent"
                android:textSize="13sp"
                android:layout_height="30dp" />
        </RadioGroup>

        <Spinner
            android:id="@+id/spinnerRd"
            android:layout_marginStart="32dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_width="170dp"
            android:layout_height="30dp"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/tvHoliday"
        android:textSize="13sp"
        android:textStyle="bold"
        android:layout_marginTop="15dp"
        app:layout_constraintTop_toBottomOf="@id/csRd"
        app:layout_constraintStart_toStartOf="parent"
        android:text="@string/if_holiday"
        android:gravity="center"
        android:textColor="@color/colorBlack"
        android:layout_width="wrap_content"
        android:layout_height="30dp"/>

    <Spinner
        android:id="@+id/spinnerHoliday"
        app:layout_constraintTop_toTopOf="@id/tvHoliday"
        app:layout_constraintStart_toEndOf="@id/tvFrequency"
        android:layout_marginStart="15dp"
        android:layout_width="wrap_content"
        android:layout_height="30dp"/>

    <CheckBox
        app:layout_constraintStart_toStartOf="@id/spinnerHoliday"
        app:layout_constraintTop_toBottomOf="@id/spinnerHoliday"
        android:layout_marginTop="10dp"
        android:text="@string/Lunar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>


</androidx.constraintlayout.widget.ConstraintLayout>