<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:id="@+id/csMain"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    android:paddingStart="35dp"
    android:paddingEnd="35dp"
    tools:context="com.kunpark.resource.view.login.LoginActivity">

    <ImageView
        android:id="@+id/imgLogo"
        android:src="@drawable/loading_ic_schedule"
        android:layout_width="150dp"
        android:layout_marginTop="80dp"
        android:visibility="visible"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_height="150dp"/>

    <EditText
        android:id="@+id/etDomain"
        android:hint="@string/domain"
        android:layout_marginTop="50dp"
        app:layout_goneMarginTop="120dp"
        android:backgroundTint="@color/colorWhite"
        android:background="@android:color/transparent"
        android:textColor="@color/colorWhite"
        android:textColorHint="@color/colorWhite"
        app:layout_constraintTop_toBottomOf="@id/imgLogo"
        android:layout_width="match_parent"
        android:layout_height="45dp"/>

    <View
        app:layout_constraintTop_toBottomOf="@id/etDomain"
        android:background="@color/colorWhite"
        android:layout_width="match_parent"
        android:layout_height="1dp"/>

    <EditText
        android:id="@+id/etId"
        android:hint="@string/id"
        android:textSize="17sp"
        android:background="@android:color/transparent"
        android:layout_marginTop="10dp"
        android:textColor="@color/colorWhite"
        android:textColorHint="@color/colorWhite"
        app:layout_constraintTop_toBottomOf="@id/etDomain"
        android:layout_width="match_parent"
        android:layout_height="45dp"/>

    <View
        app:layout_constraintTop_toBottomOf="@id/etId"
        android:background="@color/colorWhite"
        android:layout_width="match_parent"
        android:layout_height="1dp"/>

    <EditText
        android:id="@+id/etPass"
        android:hint="@string/password"
        android:textSize="17sp"
        android:paddingRight="45dp"
        android:maxLines="1"
        android:inputType="textPassword"
        android:layout_marginTop="10dp"
        android:background="@android:color/transparent"
        android:layout_marginBottom="30dp"
        android:textColor="@color/colorWhite"
        android:textColorHint="@color/colorWhite"
        app:layout_constraintTop_toBottomOf="@id/etId"
        android:layout_width="match_parent"
        android:layout_height="45dp"/>

    <ImageView
        android:id="@+id/imgShow"
        app:tint="@color/colorWhite"
        android:padding="15dp"
        android:onClick="showHidePassword"
        app:layout_constraintEnd_toEndOf="@id/etPass"
        app:layout_constraintTop_toTopOf="@id/etPass"
        android:src="@drawable/ic_show_password"
        android:layout_width="45dp"
        android:layout_height="45dp"/>

    <View
        app:layout_constraintTop_toBottomOf="@id/etPass"
        android:background="@color/colorWhite"
        android:layout_width="match_parent"
        android:layout_height="1dp"/>

    <Button
        android:id="@+id/btnLogin"
        app:layout_constraintTop_toBottomOf="@id/etPass"
        android:layout_marginTop="55dp"
        android:text="@string/login"
        android:textColor="@color/colorWhite"
        android:background="@drawable/bg_button"
        android:layout_width="match_parent"
        android:layout_height="50dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>